	between different possible duplicate matches.
	(matchmap_find_destination): Add automatic destination guessing
	and learning, based on the GncImportMatchMap.
	
	* po/POTFILES.in, de.po: Updated translations.

	* src/engine/Account.h, src/import-export/gnc-import-match-map.h:
	Clarify some comments.

2002-11-23  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/qif-merge-groups.scm: Add a new
	progress box for a function that takes forever and a day to
	complete.

	* src/import-export/qif-import/qif-to-gnc.scm: 
	* src/import-export/qif-import/qif-file.scm: Mark progress box
	strings for i18n.

	* src/import-export/qif-import/druid-qif-import.c: Fix start
	declarations so emacs can find them.

2002-11-23  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/Transaction-matcher.c: Refactor *a lot* of the
	code -- try to separate GUI-dependent tasks from GUI-independent
	ones, and make many functions publically reachable by declaring
	them in the header file.

	* src/import-export/gnc-generic-import.h, *.h: Move some function
	into new Transaction-Matcher.h (which is included from here for
	now), and add some const's at the kvp functions.

	* src/gnome-utils/dialog-utils.h: Added many comments for docs.

2002-11-22  David Hampton  <hampton@employees.org>

	* src/gnome/reconcile-list.c
	(gnc_reconcile_list_recompute_widths): Always make the contents of
	the reconciliation window fit within the allocated space.
	(gnc_reconcile_list_fill): For a split with a zero value, if the
	number field is non-null then assume this split is for a check and
	force it the credit list.

2002-11-22  Christian Stimming  <stimming@tuhh.de>

	* src/gnome-utils/dialog-account-pick.[hc]: Move the account
	picker dialog from hbci/ to gnome-utils.

	* src/import-export/Transaction-matcher.c: Fix the case when
	trans_online_id exists but is empty. Simplify heuristics for date
	matching. Increase exact amount matching value.
